# ubuntu-touch-waydroid-files

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  adb-file-explorer.desktop.in  clickable.yaml  main.cpp  manifest.json.in  snapcraft.yaml  waydroid-files-contenthub.json  waydroid-files.apparmor  waydroid-files.desktop.in
assets/: assets.qrc
plugins/: CMakeLists.txt
plugins/ADB/: CMakeLists.txt  adb_client.cpp  adb_client.h  adb_folder_model.cpp  adb_folder_model.h  plugin.cpp  plugin.h  qmldir
po/: CMakeLists.txt  waydroid-files.jcm.pot
qml/: Main.qml  qml.qrc
qml/components/: HorizontalDivider.qml  PathHistoryRow.qml
qml/content-hub/: FileOpener.qml
qml/ui/: PathHistoryToolbar.qml
qml/views/: FolderDelegateActions.qml  FolderListDelegate.qml  FolderListView.qml
src/: main.cpp  snaphelper.cpp  snaphelper.h
